cmake_minimum_required(VERSION 3.5)
project(magmad)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")

set(DAEMON_FILES
    src/core/buckets/arrays.c
    src/core/buckets/buckets.h
    src/core/buckets/pool.c
    src/core/buckets/stacked.c
    src/core/classify/ascii.c
    src/core/classify/classify.h
    src/core/compare/compare.h
    src/core/compare/ends.c
    src/core/compare/equal.c
    src/core/compare/search.c
    src/core/compare/starts.c
    src/core/encodings/base64.c
    src/core/encodings/encodings.h
    src/core/encodings/hex.c
    src/core/encodings/mappings.c
    src/core/encodings/qp.c
    src/core/encodings/url.c
    src/core/encodings/zbase32.c
    src/core/hash/adler.c
    src/core/hash/crc.c
    src/core/hash/fletcher.c
    src/core/hash/hash.h
    src/core/hash/murmur.c
    src/core/host/files.c
    src/core/host/folder.c
    src/core/host/host.c
    src/core/host/host.h
    src/core/host/mappings.c
    src/core/host/process.c
    src/core/host/spool.c
    src/core/indexes/cursors.c
    src/core/indexes/hashed.c
    src/core/indexes/indexes.h
    src/core/indexes/inx.c
    src/core/indexes/linked.c
    src/core/log/log.c
    src/core/log/log.h
    src/core/memory/align.c
    src/core/memory/bitwise.c
    src/core/memory/memory.c
    src/core/memory/memory.h
    src/core/memory/secure.c
    src/core/parsers/formats/formats.h
    src/core/parsers/formats/nvp.c
    src/core/parsers/numbers/clamp.c
    src/core/parsers/numbers/digits.c
    src/core/parsers/numbers/numbers.c
    src/core/parsers/numbers/numbers.h
    src/core/parsers/special/bracket.c
    src/core/parsers/special/special.h
    src/core/parsers/bitwise.c
    src/core/parsers/case.c
    src/core/parsers/line.c
    src/core/parsers/parsers.h
    src/core/parsers/time.c
    src/core/parsers/token.c
    src/core/parsers/trim.c
    src/core/strings/allocation.c
    src/core/strings/data.c
    src/core/strings/info.c
    src/core/strings/length.c
    src/core/strings/multi.c
    src/core/strings/nuller.c
    src/core/strings/opts.c
    src/core/strings/print.c
    src/core/strings/replace.c
    src/core/strings/shortcuts.c
    src/core/strings/strings.h
    src/core/strings/validate.c
    src/core/thread/keys.c
    src/core/thread/mutex.c
    src/core/thread/rwlock.c
    src/core/thread/thread.c
    src/core/thread/thread.h
    src/core/core.h
    src/core/type.c
    src/engine/config/cache/cache.c
    src/engine/config/cache/cache.h
    src/engine/config/cache/keys.h
    src/engine/config/global/datatier.c
    src/engine/config/global/global.c
    src/engine/config/global/global.h
    src/engine/config/global/keys.h
    src/engine/config/relay/keys.h
    src/engine/config/relay/relay.c
    src/engine/config/relay/relay.h
    src/engine/config/servers/keys.h
    src/engine/config/servers/servers.c
    src/engine/config/servers/servers.h
    src/engine/config/config.h
    src/engine/context/args.c
    src/engine/context/context.h
    src/engine/context/process.c
    src/engine/context/sanity.c
    src/engine/context/signal.c
    src/engine/context/system.c
    src/engine/context/thread.c
    src/engine/controller/controller.h
    src/engine/controller/protocol.c
    src/engine/controller/queue.c
    src/engine/status/build.c
    src/engine/status/performance.c
    src/engine/status/statistics.c
    src/engine/status/status.c
    src/engine/status/status.h
    src/engine/engine.h
    src/network/addresses.c
    src/network/clients.c
    src/network/connections.c
    src/network/dmtp.h
    src/network/http.h
    src/network/imap.h
    src/network/listeners.c
    src/network/meta.h
    src/network/network.h
    src/network/options.c
    src/network/pop.h
    src/network/read.c
    src/network/reverse.c
    src/network/sessions.h
    src/network/smtp.h
    src/network/write.c
    src/objects/auth/auth.c
    src/objects/auth/auth.h
    src/objects/auth/datatier.c
    src/objects/auth/legacy.c
    src/objects/auth/username.c
    src/objects/config/config.c
    src/objects/config/config.h
    src/objects/config/datatier.c
    src/objects/contacts/contacts.c
    src/objects/contacts/contacts.h
    src/objects/contacts/datatier.c
    src/objects/contacts/find.c
    src/objects/folders/contacts.c
    src/objects/folders/datatier.c
    src/objects/folders/find.c
    src/objects/folders/folders.c
    src/objects/folders/folders.h
    src/objects/folders/messages.c
    src/objects/mail/cache.c
    src/objects/mail/cleanup.c
    src/objects/mail/counters.c
    src/objects/mail/datatier.c
    src/objects/mail/headers.c
    src/objects/mail/load_message.c
    src/objects/mail/mail.h
    src/objects/mail/mime.c
    src/objects/mail/objects.c
    src/objects/mail/parsing.c
    src/objects/mail/paths.c
    src/objects/mail/remove_message.c
    src/objects/mail/signatures.c
    src/objects/mail/store_message.c
    src/objects/messages/datatier.c
    src/objects/messages/messages.c
    src/objects/messages/messages.h
    src/objects/messages/meta.c
    src/objects/neue/authentication.c
    src/objects/neue/credentials.c
    src/objects/neue/datatier.c
    src/objects/neue/neue.c
    src/objects/neue/neue.h
    src/objects/sessions/sessions.c
    src/objects/sessions/sessions.h
    src/objects/users/alerts.c
    src/objects/users/aliases.c
    src/objects/users/contacts.c
    src/objects/users/datatier.c
    src/objects/users/folders.c
    src/objects/users/messages.c
    src/objects/users/users.c
    src/objects/users/users.h
    src/objects/warehouse/datatier.c
    src/objects/warehouse/domains.c
    src/objects/warehouse/patterns.c
    src/objects/warehouse/warehouse.c
    src/objects/warehouse/warehouse.h
    src/objects/locks.c
    src/objects/objects.c
    src/objects/objects.h
    src/objects/serials.c
    src/providers/checkers/allocations.h
    src/providers/checkers/checkers.h
    src/providers/checkers/clamav.c
    src/providers/checkers/dkim.c
    src/providers/checkers/dspam.c
    src/providers/checkers/spf.c
    src/providers/compress/bzip.c
    src/providers/compress/compress.c
    src/providers/compress/compress.h
    src/providers/compress/engine.c
    src/providers/compress/lzo.c
    src/providers/compress/zlib.c
    src/providers/consumers/cache.c
    src/providers/consumers/consumers.h
    src/providers/consumers/counters.c
    src/providers/consumers/deserialization.c
    src/providers/consumers/serialization.c
    src/providers/cryptography/ciphers.c
    src/providers/cryptography/cryptex.c
    src/providers/cryptography/cryptography.h
    src/providers/cryptography/digest.c
    src/providers/cryptography/ecies.c
    src/providers/cryptography/hash.c
    src/providers/cryptography/hmac.c
    src/providers/cryptography/openssl.c
    src/providers/cryptography/random.c
    src/providers/cryptography/scramble.c
    src/providers/cryptography/stacie.c
    src/providers/cryptography/symmetric.c
    src/providers/database/database.h
    src/providers/database/mysql.c
    src/providers/database/query.c
    src/providers/database/results.c
    src/providers/database/stmts.c
    src/providers/database/transaction.c
    src/providers/images/freetype.c
    src/providers/images/gd.c
    src/providers/images/images.h
    src/providers/images/jpeg.c
    src/providers/images/png.c
    src/providers/parsers/json.c
    src/providers/parsers/parsers.h
    src/providers/parsers/utf8.c
    src/providers/parsers/xml.c
    src/providers/storage/data.c
    src/providers/storage/storage.h
    src/providers/storage/tank.c
    src/providers/storage/tokyo.c
    src/providers/storage/tree.c
    src/providers/providers.h
    src/providers/symbols.c
    src/providers/symbols.h
    src/servers/dmtp/commands.c
    src/servers/dmtp/commands.h
    src/servers/dmtp/dmtp.c
    src/servers/dmtp/dmtp.h
    src/servers/dmtp/parse.c
    src/servers/dmtp/session.c
    src/servers/http/commands.h
    src/servers/http/content.c
    src/servers/http/data.c
    src/servers/http/errors.c
    src/servers/http/http.c
    src/servers/http/http.h
    src/servers/http/parse.c
    src/servers/http/response.c
    src/servers/http/sessions.c
    src/servers/imap/commands.c
    src/servers/imap/commands.h
    src/servers/imap/fetch.c
    src/servers/imap/fetch_response.c
    src/servers/imap/flags.c
    src/servers/imap/folders.c
    src/servers/imap/imap.c
    src/servers/imap/imap.h
    src/servers/imap/messages.c
    src/servers/imap/output.c
    src/servers/imap/parse.c
    src/servers/imap/parse_address.c
    src/servers/imap/range.c
    src/servers/imap/search.c
    src/servers/imap/sessions.c
    src/servers/molten/commands.c
    src/servers/molten/commands.h
    src/servers/molten/molten.c
    src/servers/molten/molten.h
    src/servers/molten/sessions.c
    src/servers/pop/commands.c
    src/servers/pop/commands.h
    src/servers/pop/mailbox.c
    src/servers/pop/parse.c
    src/servers/pop/pop.c
    src/servers/pop/pop.h
    src/servers/pop/sessions.c
    src/servers/smtp/accept.c
    src/servers/smtp/checkers.c
    src/servers/smtp/commands.c
    src/servers/smtp/commands.h
    src/servers/smtp/datatier.c
    src/servers/smtp/messages.c
    src/servers/smtp/parse.c
    src/servers/smtp/relay.c
    src/servers/smtp/session.c
    src/servers/smtp/smtp.c
    src/servers/smtp/smtp.h
    src/servers/smtp/transmit.c
    src/servers/servers.h
    src/web/contact/abuse.c
    src/web/contact/business.c
    src/web/contact/contact.c
    src/web/contact/contact.h
    src/web/json_api/endpoints.c
    src/web/json_api/helpers.c
    src/web/json_api/json_api.c
    src/web/json_api/json_api.h
    src/web/portal/config.c
    src/web/portal/contacts.c
    src/web/portal/endpoint.c
    src/web/portal/flags.c
    src/web/portal/folders.c
    src/web/portal/mail.c
    src/web/portal/messages.c
    src/web/portal/methods.h
    src/web/portal/parse.c
    src/web/portal/portal.c
    src/web/portal/portal.h
    src/web/register/abuse.c
    src/web/register/business.c
    src/web/register/captcha.c
    src/web/register/datatier.c
    src/web/register/register.c
    src/web/register/register.h
    src/web/register/sessions.c
    src/web/statistics/datatier.c
    src/web/statistics/statistics.c
    src/web/statistics/statistics.h
    src/web/teacher/datatier.c
    src/web/teacher/teacher.c
    src/web/teacher/teacher.h
    src/web/web.h
    src/magma.h
    src/queries.h)

set(CHECK_FILES
        check/objects/objects_check.c
        check/objects/objects_check.h
        check/core/system_check.c
        check/core/base64_check.c
        check/core/zbase32_check.c
        check/core/tree_check.c
        check/core/url_check.c
        check/core/linked_check.c
        check/core/core_check.h
        check/core/nbo_check.c
        check/core/hashed_check.c
        check/core/qp_check.c
        check/core/hex_check.c
        check/core/string_check.c
        check/core/inx_check.c
        check/core/core_check.c
        check/core/clamp_check.c
        check/core/bitwise_check.c
        check/core/qsort_check.c
        check/providers/provide_check.c
        check/providers/scramble_check.c
        check/providers/ecies_check.c
        check/providers/symmetric_check.c
        check/providers/provide_check.h
        check/providers/unicode_check.c
        check/providers/hash_check.c
        check/providers/stacie_check.c
        check/providers/hmac_check.c
        check/providers/virus_check.c
        check/providers/compress_check.c
        check/providers/rand_check.c
        check/providers/tank_check.c
        check/providers/dspam_check.c
        check/magma_check.c
        check/users/users_check.h
        check/users/users_check.c
        check/network/network_check.c
        check/network/address_check.c
        check/network/network_check.h
        check/magma_check.h)

add_definitions(-D_REENTRANT
        -D_GNU_SOURCE
        -D_LARGEFILE64_SOURCE
        -DHAVE_NS_TYPE
        -DFORTIFY_SOURCE=2
        -DMAGMA_PEDANTIC
        -DMAGMA_COMMIT="XYX"
        -DMAGMA_TIMESTAMP="XYX"
        -DMAGMA_VERSION="XYX")

include_directories(src
        lib/sources/clamav/libclamav
        lib/sources/mysql/include
        lib/sources/openssl/include
        lib/sources/lzo/include
        lib/sources/xml2/include
        lib/sources/zlib
        lib/sources/bzip2
        lib/sources/tokyocabinet
        lib/sources/memcached
        lib/sources/dkim/libopendkim
        lib/sources/dspam/src
        lib/sources/jansson/src
        lib/sources/gd
        lib/sources/png
        lib/sources/jpeg
        lib/sources/freetype/include
        lib/sources/utf8proc
        lib/sources/spf2/src/include)

link_libraries(rt dl pthread)
add_executable(magmad ${DAEMON_FILES} src/magma.c)

link_libraries(check)
include_directories(/home/ladar/ClionProjects/magma/check)
add_executable(magmad.check ${DAEMON_FILES} ${CHECK_FILES})

